issue add zregex function

--- a/public/index.html
+++ b/public/index.html
@@ -294,7 +294,7 @@
             <option value="Afghanistan">Afghanistan</option>
             <option value="Aland Islands">Aland Islands</option>
             <option value="Albania">Albania</option>
-            <option value="Algeria">Algeria</option>
+            <option value="Algéria">Algéria</option>
             <option value="American Samoa">American Samoa</option>
             <option value="Andorra">Andorra</option>
             <option value="Angola">Angola</option>
